--- a/PlanetRow/PlanetRow.csproj
+++ b/PlanetRow/PlanetRow.csproj
@@ -41,6 +41,9 @@
     <Compile Include="..\build\FierceShower\RustyFist.cs">
       <Link>RustyFist.cs</Link>
     </Compile>
+    <Compile Include="..\build\FierceShower\RustyTest.cs">
+      <Link>RustyTest.cs</Link>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
