--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.0)
 
 include_directories(RustyFist/include)
 
+add_definitions(-std=c++11)
+
 add_subdirectory(RustyFist)
 
 add_subdirectory(FierceShower)
