--- a/RustyFist/CMakeLists.txt
+++ b/RustyFist/CMakeLists.txt
@@ -4,8 +4,10 @@ add_definitions(-fPIC)
 
 set(SOURCES
 	include/RustyFist/RustyFist.h
+    include/RustyFist/RustyTest.h
 
-	src/RustyFist.cpp
+    src/RustyFist.cpp
+    src/RustyTest.cpp
 )
 
 add_library(RustyFist ${SOURCES})
