добавил кокос в сборку

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ include_directories(RustyFist/include)
 
 add_definitions(-std=c++11)
 
+add_subdirectory(3rdparty/cocos)
+
 add_subdirectory(RustyFist)
 
 add_subdirectory(FierceShower)
