--- a/PlanetRow/PlanetRow.csproj
+++ b/PlanetRow/PlanetRow.csproj
@@ -38,11 +38,11 @@
     <Compile Include="..\build\FierceShower\FierceShowerPINVOKE.cs">
       <Link>FierceShowerPINVOKE.cs</Link>
     </Compile>
+    <Compile Include="..\build\FierceShower\GameLogic.cs">
+      <Link>GameLogic.cs</Link>
+    </Compile>
     <Compile Include="..\build\FierceShower\RustyFist.cs">
       <Link>RustyFist.cs</Link>
-    </Compile>
-    <Compile Include="..\build\FierceShower\RustyTest.cs">
-      <Link>RustyTest.cs</Link>
     </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
