--- a/RustyFist/CMakeLists.txt
+++ b/RustyFist/CMakeLists.txt
@@ -1,13 +1,17 @@
 cmake_minimum_required(VERSION 3.0)
 
-add_definitions(-fPIC)
-
 set(SOURCES
 	include/RustyFist/RustyFist.h
-    include/RustyFist/RustyTest.h
+    include/RustyFist/GameLogic.h
 
     src/RustyFist.cpp
-    src/RustyTest.cpp
+    src/GameLogic.cpp
+    
+    src/AppDelegate.cpp
+    src/AppDelegate.h
+    src/AppMacros.h
+    src/HelloWorldScene.cpp
+    src/HelloWorldScene.h
 )
 
 add_library(RustyFist ${SOURCES})
