Добавил отрисовку опенгл из шарпа

--- a/LostFoot/LostFoot.csproj
+++ b/LostFoot/LostFoot.csproj
@@ -40,4 +40,9 @@
       <Name>PlanetRow</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="MonoGLo">
+      <HintPath>..\..\MonoGLo-0.2\lib\MonoGLo.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
