добавил тач события и по мелочи

--- a/LostFoot/LostFoot.csproj
+++ b/LostFoot/LostFoot.csproj
@@ -34,6 +34,7 @@
     <Compile Include="MainClass.cs" />
     <Compile Include="CSharpGameLogicImpl.cs" />
     <Compile Include="CSharpLayerImpl.cs" />
+    <Compile Include="CSTouchSink.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PlanetRow\PlanetRow.csproj">
